univention-virtual-machine-manager-daemon (7.0.0-17) unstable; urgency=low

  * Bug #47617: Add post-copy migration.
  * Bug #47741: Fix file permissions of cache directory.
  * Bug #36661: Fix parsing memory and disk capacities.
  * Bug #48199: Allow configuring migration target host while VM is running.
  * Bug #48083: Frontend changes for post-copy migration

 -- Philipp Hahn <hahn@univention.de>  Wed, 28 Nov 2018 19:07:41 +0100

univention-virtual-machine-manager-daemon (7.0.0-16) unstable; urgency=medium

  * Bug #48106: show warning for vnc_password if length > 8

 -- Johannes Keiser <keiser@univention.de>  Wed, 28 Nov 2018 15:48:27 +0100

univention-virtual-machine-manager-daemon (7.0.0-15) unstable; urgency=low

  * Bug #47956: Fix disk target dev name assignment

 -- Philipp Hahn <hahn@univention.de>  Wed, 28 Nov 2018 15:44:16 +0100

univention-virtual-machine-manager-daemon (7.0.0-14) unstable; urgency=low

  * Bug #47956: Fix disk target dev name assignment
  * Bug #35761: Drop corrupt cache files on error
  * Bug #22695: Report IO errors.

 -- Philipp Hahn <hahn@univention.de>  Wed, 28 Nov 2018 09:21:40 +0100

univention-virtual-machine-manager-daemon (7.0.0-13) unstable; urgency=low

  * Bug #47956: Fix disk target dev name assignment

 -- Philipp Hahn <hahn@univention.de>  Tue, 27 Nov 2018 12:36:04 +0100

univention-virtual-machine-manager-daemon (7.0.0-12) unstable; urgency=low

  * Bug #21386: Fix spelling mistakes in UCR variable descriptions.

 -- Philipp Hahn <hahn@univention.de>  Fri, 05 Oct 2018 16:57:02 +0200

univention-virtual-machine-manager-daemon (7.0.0-11) unstable; urgency=low

  * Bug #21386: Assert compatible CPU during live migration

 -- Philipp Hahn <hahn@univention.de>  Fri, 14 Sep 2018 08:40:11 +0200

univention-virtual-machine-manager-daemon (7.0.0-10) unstable; urgency=medium

  * Bug #41772: fix javascript traceback

 -- Jannik Ahlers <ahlers@univention.de>  Tue, 03 Jul 2018 17:33:48 +0200
