@@ -34,8 +34,9 @@ define([
 	"dojo/_base/array",
 	"umc/tools",
 	"umc/dialog",
+	"umc/modules/uvmm/types",
 	"umc/i18n!umc/modules/uvmm"
-], function(declare, lang, array, tools, dialog, _) {
+], function(declare, lang, array, tools, dialog, types, _) {
 
 	return declare('umc.modules.uvmm.TreeModel', null, {
 		// summary:
@@ -92,7 +93,7 @@ define([
 					onComplete(array.map(results, lang.hitch(this, function(groupname) {
 						return {
 							id: groupname,
-							label: groupname == 'default' ? _('Physical servers') : (groupname == 'cloudconnections' ? _('Cloud connections') : groupname),
+							label: this._getGroupNameLabel(groupname),
 							type: 'group',
 							icon: 'uvmm-group'
 						};
@@ -106,32 +107,90 @@ define([
 					}
 				}));
 			} else if (parentItem.type == 'group' && parentItem.id == 'default') {
-				this.umcpCommand('uvmm/node/query', {
-					nodePattern: ''
-				}).then(lang.hitch(this, function(data) {
-					var results = data.result instanceof Array ? data.result : [];
-					results.sort(tools.cmpObjects('label'));
-					onComplete(array.map(results, lang.hitch(this, function(node) {
-						node.label = this._cutDomain( node.label );
-						return node;
-					})));
-				}));
+				this.getNodes('uvmm/node/query', onComplete);
 			} else if (parentItem.type == 'node') {
 				onComplete([]);
 			} else if (parentItem.type == 'group' && parentItem.id == 'cloudconnections') {
-				this.umcpCommand('uvmm/cloud/query', {
-					nodePattern: ''
-				}).then(lang.hitch(this, function(data) {
-					var results = data.result instanceof Array ? data.result : [];
-					results.sort(tools.cmpObjects('label'));
-					onComplete(array.map(results, lang.hitch(this, function(node) {
-						node.label = this._cutDomain( node.label );
-						return node;
-					})));
-				}));
+				this.getNodes('uvmm/cloud/query', onComplete);
 			} else if (parentItem.type == 'cloud') {
 				onComplete([]);
 			}
+		},
+
+		_getGroupNameLabel: function(groupname) {
+			var label;
+			switch (groupname) {
+				case 'default':
+					label = _('Physical servers');
+					break;
+				case 'cloudconnections':
+					label = _('Cloud connections');
+					break;
+				default:
+					label = groupname;
+			}
+			label = lang.replace(
+				'<span class="tree-description" title="{label}">{label}</span>',
+				{label: label}
+			);
+			if (groupname === 'default') {
+				label += '<span class="node-ressources">CPU | Mem<span>';
+			}
+			return label;
+		},
+
+		getNodes: function(command, onComplete) {
+			this.umcpCommand(command, {
+				nodePattern: ''
+			}).then(lang.hitch(this, function(data) {
+				var results = data.result instanceof Array ? data.result : [];
+				results.sort(tools.cmpObjects('label'));
+				onComplete(array.map(results, lang.hitch(this, function(node) {
+					if (this._nodeHasRessources(node)) {
+						node.label = this._getRessourceNodeLabel(node);
+					} else {
+						node.label = lang.replace(
+							'<span class="tree-description" title="{label}">{label}</span>',
+							{label: this._cutDomain(node.label)}
+						);
+					}
+					return node;
+				})));
+			}));
+		},
+
+		_nodeHasRessources: function(node) {
+			var hasRessources = array.every(['cpuUsage', 'memUsed', 'memAvailable'], function(ressource) {
+				return node.hasOwnProperty(ressource);
+			});
+			return hasRessources && node.memAvailable !== 0 && node.available;
+		},
+
+		_getRessourceNodeLabel: function(node) {
+			var shortName = this._cutDomain(node.label);
+			var label = lang.replace(
+				'<span title="{shortName}" class="tree-description">{shortName}</span>' +
+				'<span title="CPU usage: {cpu}%; Memory usage: {memUsed}/{memAvailable}" ' +
+				'class="node-ressources">{cpu}% | {mem}%</span>',
+				{
+					cpu: this._formatPercent(node.cpuUsage * 100),
+					mem: this._formatPercent(node.memUsed / node.memAvailable * 100),
+					shortName: shortName,
+					memAvailable: types.prettyCapacity(node.memAvailable),
+					memUsed: types.prettyCapacity(node.memUsed)
+				}
+			);
+			return label;
+		},
+
+		_formatPercent: function(number) {
+			number = parseInt(number);
+			if (number < 10) {
+				return '\u2007' + '\u2007' + number;
+			} else if (number < 100) {
+				return '\u2007' + number;
+			}
+			return number;
 		},
 
 		changes: function( nodes ) {
