@@ -5,6 +5,7 @@ univention-virtual-machine-manager-daemon (7.0.0-17) unstable; urgency=low
   * Bug #36661: Fix parsing memory and disk capacities.
   * Bug #48199: Allow configuring migration target host while VM is running.
   * Bug #48083: Frontend changes for post-copy migration
+  * Bug #35196: Show CPU usage in tree of virtualization hosts.
 
  -- Philipp Hahn <hahn@univention.de>  Wed, 28 Nov 2018 19:07:41 +0100
 
